# ALEXNET

./: README.md
VER1/: CMakeCache.txt  CMakeLists.txt  Makefile  alphas.hpp  bn_variables.hpp  cmake_install.cmake  fixed.h  help.cpp  model.cpp  run  weights.hpp
VER2/: CMakeCache.txt  CMakeLists.txt  Makefile  alphas.hpp  bn_variables.hpp  cmake_install.cmake  help.cpp  model.cpp  run  temporary.cpp  test.cpp  weights.hpp
